// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card with compound components matches snapshot 1`] = `
<div
  className="wh-auto brs-8px ow-hidden bcr- br-none tn-all-0p2s-ease cr- mobile--brs-4px"
  style={Object {}}
>
  <div
    borderBottomColor="color-gray-200"
    borderBottomStyle="solid"
    borderBottomWidth="1px"
    className="pg-16px cr- mobile--pg-12px"
    style={Object {}}
  >
    Header
  </div>
  <div
    className="pg-16px cr- mobile--pg-12px"
    style={Object {}}
  >
    Content
  </div>
  <div
    borderTopColor="color-gray-200"
    borderTopStyle="solid"
    borderTopWidth="1px"
    className="pg-16px mobile--pg-12px"
    style={Object {}}
  >
    Footer
  </div>
</div>
`;

exports[`Card with custom views matches snapshot 1`] = `
<div
  className="wh-auto brs-8px ow-hidden bcr- br-none tn-all-0p2s-ease cr- mobile--brs-4px"
  style={Object {}}
>
  <div
    className="dy-flex fdn-column"
  >
    <div
      borderBottomColor="color-gray-200"
      borderBottomStyle="solid"
      borderBottomWidth="1px"
      className="pg-16px cr- mobile--pg-12px pbm-16px"
      style={Object {}}
    >
      <div>
        Header
      </div>
    </div>
    <div
      className="pg-16px cr- mobile--pg-12px"
      style={Object {}}
    >
      Content
    </div>
  </div>
</div>
`;

exports[`Card with default props matches snapshot 1`] = `
<div
  className="wh-auto brs-8px ow-hidden bcr- br-none tn-all-0p2s-ease cr- mobile--brs-4px"
  style={Object {}}
>
  <div
    className="dy-flex fdn-column"
  >
    <div
      className="pg-16px cr- mobile--pg-12px"
      style={Object {}}
    >
      Card Content
    </div>
  </div>
</div>
`;

exports[`Card with header and footer matches snapshot 1`] = `
<div
  className="wh-auto brs-8px ow-hidden bcr- br-none tn-all-0p2s-ease cr- mobile--brs-4px"
  style={Object {}}
>
  <div
    className="dy-flex fdn-column"
  >
    <div
      borderBottomColor="color-gray-200"
      borderBottomStyle="solid"
      borderBottomWidth="1px"
      className="pg-16px cr- mobile--pg-12px"
      style={Object {}}
    >
      <div>
        Header
      </div>
    </div>
    <div
      className="pg-16px cr- mobile--pg-12px"
      style={Object {}}
    >
      Content
    </div>
    <div
      borderTopColor="color-gray-200"
      borderTopStyle="solid"
      borderTopWidth="1px"
      className="pg-16px mobile--pg-12px"
      style={Object {}}
    >
      <div>
        Footer
      </div>
    </div>
  </div>
</div>
`;
